# LifeStreamer

./: .gitignore  .gitmodules  README.md  RTMP_STATUS_AND_RETRY.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  srtla_jni.cpp
app/src/main/java/com/dimadesu/lifestreamer/: ApplicationConstants.kt
app/src/main/java/com/dimadesu/lifestreamer/audio/: AppBluetoothSource.kt  AudioLevel.kt  AudioPassthroughManager.kt  BluetoothAudioConfig.kt  BluetoothAudioManager.kt  BluetoothAudioSource.kt  ConditionalAudioSourceFactory.kt  ScoOrchestrator.kt  SmartMicrophoneSource.kt  SmartMicrophoneSourceFactory.kt  UnprocessedAudioSource.kt  UsbAudioManager.kt  VuMeterEffect.kt
app/src/main/java/com/dimadesu/lifestreamer/model/: StreamStatus.kt
app/src/main/res/layout/: activity_faq_help.xml  activity_known_issues.xml  activity_rtmp_help.xml  activity_srt_help.xml  activity_uvc_help.xml  activity_uvc_test.xml  fragment_video_format.xml  main_fragment.xml
app/src/main/res/menu/: actions.xml  menu_uvc_test.xml
app/src/main/res/values/: array.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
docs/: BACKGROUND_STREAMING_ANALYSIS.md  CAMERA_SESSION_LIFECYCLE.md  MUTEX_LOCK_FIX.md  ORIENTATION_FIX_IMPLEMENTATION.md  ORIENTATION_HANDLING_ANALYSIS.md  SRT_BACKGROUND_STREAMING_ISSUES.md  research-rtmp-src-audio-is-sometimes-missing-after-rtmp-src-restart.md  rtmp-audio-silent-research.md
gradle/: libs.versions.toml
(+60 files in other folders)
